section gallery and project done

--- a/src/config/projects.json
+++ b/src/config/projects.json
@@ -3,6 +3,7 @@
     "title": "VILLA FLORENCE",
     "projectId": "proyecto-villaflorence",
     "description": "Villa Florence es una hermosa villa con un diseño elegante y sofisticado. Esta impresionante propiedad ofrece un ambiente relajado y lujoso, con cada detalle cuidadosamente diseñado para crear un espacio de vida excepcional.",
+    "descriptionText": "La construcción de Villa Florence: minimalismo, sostenibilidad y tecnología",
     "location": "Fuengirola, España",
     "img": "/assets/portfolio/V01/global/04-large-global.avif",
     "alt": "image proyect villa florence",
@@ -57,6 +58,7 @@
     "title": "VILLA PALMA",
     "projectId": "proyecto-villapalma",
     "description": "Villa Palma es una impresionante villa mediterránea que combina el lujo y la elegancia en un solo espacio. Situada en una ubicación privilegiada, esta villa ofrece vistas espectaculares y un ambiente relajado para disfrutar de la vida al máximo.",
+    "descriptionText": "Conceptos clave en Villa Palma: innovación, eficiencia y estética",
     "location": "Marbella, España",
     "img": "/assets/portfolio/V02/exterior/01-exterior.jpg",
     "alt": "image proyect villa palma",
@@ -89,6 +91,7 @@
     "title": "VILLA OLIVA",
     "projectId": "proyecto-villaoliva",
     "description": "Villa Olivia es una hermosa propiedad que cuenta con una elegante piscina y un diseño sofisticado. Esta villa ofrece una experiencia de vida excepcional, combinando la tranquilidad de una ubicación privilegiada con el lujo de una villa moderna.",
+    "descriptionText": "Villa Olivia: fusionando la arquitectura moderna con la naturaleza y el estilo de vida mediterráneo",
     "location": "Marbella, España",
     "img": "/assets/portfolio/V03/HR Villa Olivia-003.avif",
     "alt": "image proyect villa oliva",
@@ -120,6 +123,7 @@
     "title": "COTO REAL",
     "projectId": "proyecto-cotoreal",
     "description": "Una villa de estilo moderno y sofisticado, en un entorno natural impresionante, diseñada para ofrecer un ambiente de vida excepcional.",
+    "descriptionText": "En construcción",
     "location": "En construcción",
     "img": "/assets/portfolio/V04/OBRAS.avif",
     "alt": "image proyect coto real",
